2015-08-07  Kirill Yukhin  <kirill.yukhin@intel.com>

	* config/i386/i386.md (define_attr "isa"): Addd avx512vl and
	noavx512vl.
	(define_attr "enabled"): Handle avx521vl and noavx512vl.
	* config/i386/sse.md (define_insn "vec_dupv2df<mask_name>"): Split
	AVX-512 alternative out of SSE.
	(define_insn "*vec_concatv2df"): Ditto.

2015-08-05  Matthew Wahab  <matthew.wahab@arm.com>

	Backport from trunk:
	2015-06-29  Matthew Wahab  <matthew.wahab@arm.com>

	PR target/65697
	* config/arm/arm.c (arm_split_compare_and_swap): For ARMv8,
	replace an initial acquire barrier with final barrier.

2015-08-05  Matthew Wahab  <matthew.wahab@arm.com>

	Backport from trunk:
	2015-06-29  Matthew Wahab  <matthew.wahab@arm.com>

	PR target/65697
	* config/arm/arm.c (arm_split_atomic_op): For ARMv8, replace an
	initial acquire barrier with final barrier.

2015-08-05  Matthew Wahab  <matthew.wahab@arm.com>

	Backport from trunk.
	2015-06-01  Matthew Wahab  <matthew.wahab@arm.com>

	PR target/65697
	* config/aarch64/aarch64.c (aarch64_split_compare_and_swap): Check
	for __sync memory models, emit initial loads and final barriers as
	appropriate.

2015-08-05  Matthew Wahab  <matthew.wahab@arm.com>

	Backport from trunk.
	2015-06-01  Matthew Wahab  <matthew.wahab@arm.com>

	PR target/65697
	* config/aarch64/aarch64.c (aarch64_emit_post_barrier): New.
	(aarch64_split_atomic_op): Check for __sync memory models, emit
	appropriate initial loads and final barriers.

2015-08-05  Matthew Wahab  <matthew.wahab@arm.com>

	Backport from trunk
	2015-05-12  Andrew MacLeod  <amacleod@redhat.com>

	PR target/65697
	* coretypes.h (MEMMODEL_SYNC, MEMMODEL_BASE_MASK): New macros.
	(enum memmodel): Add SYNC_{ACQUIRE,RELEASE,SEQ_CST}.
	* tree.h (memmodel_from_int, memmodel_base, is_mm_relaxed)
	(is_mm_consume,is_mm_acquire, is_mm_release, is_mm_acq_rel)
	(is_mm_seq_cst, is_mm_sync): New accessor functions.
	* builtins.c (expand_builtin_sync_operation)